Fixed layout issue in Firefox

--- a/phpmyfaq/template/admin.css
+++ b/phpmyfaq/template/admin.css
@@ -245,6 +245,7 @@ div#sessioncounter {
     margin-left: 20px;
     padding: 0;
     height: 24px;
+    clear: both;
 }
 #subnavcontainer ul {
     border: 0;
